test/invalid/vartest.js
function () {
var x;
x = 0;
x = 'a';
}
